fix-item-gap

--- a/src/css/build-bakery.css
+++ b/src/css/build-bakery.css
@@ -43,6 +43,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 24px;
 }
 
 .bb__item-txt,
